--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,25 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # environment
-minecraftVersion=1.17.1
+minecraftVersion=1.18
 projectLoader=Fabric
-fabricVersion=0.11.6
-fabricApiVersion=0.42.1+1.17
-puzzlesVersion=v2.0.0-1.17.1-Fabric
+fabricVersion=0.12.6
+fabricApiVersion=0.43.1+1.18
+puzzlesVersion=v3.0.0-1.18-Fabric
 enableHotswap=false
 copyBuildJar=true
 
 # dependencies
-minMinecraftVersion=1.17
-minFabricVersion=0.11.3
-minFabricApiVersion=0.40
-minPuzzlesVersion=2.0.0
-packFormat=7
+minMinecraftVersion=1.18
+minFabricVersion=0.12
+minFabricApiVersion=0.43
+minPuzzlesVersion=3.0.0
+packFormat=8
 
 # attributes
 modId=tradingpost
 modName=Trading Post
-modVersion=2.0.0
+modVersion=3.0.0
 modAuthor=Fuzs
 modDescription=Rule the village! Trade with every villager at once!
 modPageUrl=https://www.curseforge.com/minecraft/mc-mods/trading-post-fabric
@@ -34,4 +34,4 @@ modGroup=fuzs.tradingpost
 # publishing
 curseProjectId=547472
 curseReleaseType=release
-curseProjectVersion=1.17, 1.17.1
+curseProjectVersion=1.18
