--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # environment
-minecraftVersion=1.18
+minecraftVersion=1.18.1
 projectLoader=Fabric
-fabricVersion=0.12.6
-fabricApiVersion=0.43.1+1.18
-puzzlesVersion=v3.0.0-1.18-Fabric
+fabricVersion=0.12.10
+fabricApiVersion=0.44.0+1.18
+puzzlesVersion=v3.1.0-1.18.1-Fabric
 enableHotswap=false
 copyBuildJar=true
 
@@ -22,7 +22,7 @@ packFormat=8
 # attributes
 modId=tradingpost
 modName=Trading Post
-modVersion=3.0.0
+modVersion=3.1.0
 modAuthor=Fuzs
 modDescription=Rule the village! Trade with every villager at once!
 modPageUrl=https://www.curseforge.com/minecraft/mc-mods/trading-post-fabric
@@ -34,4 +34,4 @@ modGroup=fuzs.tradingpost
 # publishing
 curseProjectId=547472
 curseReleaseType=release
-curseProjectVersion=1.18
+curseProjectVersion=1.18, 1.18.1
