--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,25 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # environment
-minecraftVersion=1.18.1
+minecraftVersion=1.18.2
 projectLoader=Fabric
-fabricVersion=0.12.10
-fabricApiVersion=0.44.0+1.18
-puzzlesVersion=v3.1.0-1.18.1-Fabric
+fabricVersion=0.13.3
+fabricApiVersion=0.47.8+1.18.2
+puzzlesVersion=v3.3.1-1.18.2-Fabric
 enableHotswap=false
 copyBuildJar=true
 
 # dependencies
-minMinecraftVersion=1.18
-minFabricVersion=0.12
-minFabricApiVersion=0.43
-minPuzzlesVersion=3.0.0
+minMinecraftVersion=1.18.2
+minFabricVersion=0.13.3
+minFabricApiVersion=0.47.8
+minPuzzlesVersion=3.3.0
 packFormat=8
 
 # attributes
 modId=tradingpost
 modName=Trading Post
-modVersion=3.1.2
+modVersion=3.2.0
 modAuthor=Fuzs
 modDescription=Rule the village! Trade with every villager at once!
 modPageUrl=https://www.curseforge.com/minecraft/mc-mods/trading-post-fabric
@@ -34,4 +34,4 @@ modGroup=fuzs.tradingpost
 # publishing
 curseProjectId=547472
 curseReleaseType=release
-curseProjectVersion=1.18, 1.18.1
+curseProjectVersion=1.18.2
